--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 
       <div class="line">
-        <div class="left">Logo Design</div>
+        <div class="left">Construct Connect Logo</div>
         <div class="right">
           <p>Adobe Illustrator</p>
           <p>2023</p>
@@ -87,13 +87,54 @@
 
 
       <div class="line">
-        <div class="left">Logo Design</div>
+        <div class="left">Webreate Logo</div>
         <div class="right">
           <p>Adobe Illustrator</p>
           <p>2023</p>
         </div>
         <div class="img">
           <img src="image/1.png" alt="">
+        </div>
+      </div>
+
+
+
+
+      <div class="line">
+        <div class="left">Social Media Home Design</div>
+        <div class="right">
+          <p>Figma ,Illustrator</p>
+          <p>2023</p>
+        </div>
+        <div class="img">
+          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/d63a04169213829.6471536bbd1fc.png" alt="">
+        </div>
+      </div>
+
+
+
+    <div class="line">
+        <div class="left">Happy Birthday Poster Design</div>
+        <div class="right">
+          <p>Adobe PhotoShop</p>
+          <p>2023</p>
+        </div>
+        <div class="img">
+          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/1ace95169213829.64a543a60d655.png" alt="">
+        </div>
+      </div>
+
+
+
+
+    <div class="line">
+        <div class="left">Call of Duty</div>
+        <div class="right">
+          <p>Adobe PhotoShop</p>
+          <p>2023</p>
+        </div>
+        <div class="img">
+          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/789750169213829.64884736174af.png" alt="">
         </div>
       </div>
 
