--- a/index.html
+++ b/index.html
@@ -128,15 +128,47 @@
 
 
     <div class="line">
-        <div class="left">Call of Duty</div>
+        <div class="left">Game Poster Design</div>
         <div class="right">
-          <p>Adobe PhotoShop</p>
-          <p>2023</p>
+          <p>PhotoShop, Illustrator</p>
+          <p>2022</p>
         </div>
         <div class="img">
           <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/789750169213829.64884736174af.png" alt="">
         </div>
       </div>
+
+
+
+
+    <div class="line">
+        <div class="left">Nature's Graph Logo</div>
+        <div class="right">
+          <p>Illustrator</p>
+          <p>2022</p>
+        </div>
+        <div class="img">
+          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/503734169213829.6488473616295.png" alt="">
+        </div>
+      </div>
+
+
+
+
+
+
+
+    <div class="line">
+        <div class="left">Neha Events Logo</div>
+        <div class="right">
+          <p>Illustrator</p>
+          <p>2023</p>
+        </div>
+        <div class="img">
+          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/defa6a169213829.64c115dc72391.png" alt="">
+        </div>
+      </div>
+
 
 
 
