--- a/index.html
+++ b/index.html
@@ -172,6 +172,20 @@
 
 
 
+    <div class="line">
+        <div class="left">Instagram Grid Design</div>
+        <div class="right">
+          <p>Adobe Illustrator</p>
+          <p>2023</p>
+        </div>
+        <div class="img">
+          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/21b2a3178504475.64e8e6dcbf051.jpg" alt="">
+        </div>
+      </div>
+
+
+
+
 
 
 
