--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 
     <div class="line">
-        <div class="left">Happy Birthday Poster Design</div>
+        <div class="left">Birthday Poster Design</div>
         <div class="right">
           <p>Adobe PhotoShop</p>
           <p>2023</p>
