--- a/index.html
+++ b/index.html
@@ -5,18 +5,43 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>My Portfolio</title>
+  <link rel="icon" href="img/fav.png">
   <link rel="stylesheet" href="css/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <style>
+      .custom-cursor {
+      position: fixed;
+      width: 70px; /* Adjust the size of the cursor */
+      height: 70px;
+      background: url('image/hover.png') no-repeat;
+      background-size: cover;
+      pointer-events: none; /* Ensure the cursor doesn't interfere with interactions */
+      z-index: 9999; /* Make sure the cursor appears on top of other elements */
+      transform-origin: center; /* Rotate around the center */
+      display: none; /* Initially hide the custom cursor */
+    }
+    html {
+      cursor: url('image/black.png'), auto;
+    }
+    </style>
 </head>
 
 <body>
+  <div class="custom-cursor"></div>
+
   <nav>
-    <a href="#">
-      <img src="image/logo.svg" height="35px" alt="">
-    </a>
-    <a href="about.html" id="#about">About</a>
+    <div class="left">
+      <a href="#">
+        <img src="image/logo.svg" height="35px" alt="">
+      </a>
+    </div>
+    <div class="right">
+      <a href="about.html" id="#about">About</a>
+    </div>
   </nav>
+
+
   <main>
     <div class="content">
 
@@ -30,7 +55,8 @@
           <p>2022</p>
         </div>
         <div class="img">
-          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/fac76f177082723.64d08faf46cba.png" alt="">
+          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/fac76f177082723.64d08faf46cba.png"
+            alt="">
         </div>
       </div>
 
@@ -42,7 +68,8 @@
           <p>2022</p>
         </div>
         <div class="img">
-          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/ee9654176977137.64ce219a8f406.png" alt="">
+          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/ee9654176977137.64ce219a8f406.png"
+            alt="">
         </div>
       </div>
 
@@ -80,7 +107,8 @@
           <p>2023</p>
         </div>
         <div class="img">
-          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/e02985169213829.64a543a5a2da8.png" alt="">
+          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/e02985169213829.64a543a5a2da8.png"
+            alt="">
         </div>
       </div>
 
@@ -113,42 +141,45 @@
 
 
 
-    <div class="line">
-        <div class="left">Birthday Poster Design</div>
+      <div class="line">
+        <div class="left">Happy Birthday Poster Design</div>
         <div class="right">
           <p>Adobe PhotoShop</p>
           <p>2023</p>
         </div>
         <div class="img">
-          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/1ace95169213829.64a543a60d655.png" alt="">
+          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/1ace95169213829.64a543a60d655.png"
+            alt="">
         </div>
       </div>
 
 
 
 
-    <div class="line">
+      <div class="line">
         <div class="left">Game Poster Design</div>
         <div class="right">
           <p>PhotoShop, Illustrator</p>
           <p>2022</p>
         </div>
         <div class="img">
-          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/789750169213829.64884736174af.png" alt="">
+          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/789750169213829.64884736174af.png"
+            alt="">
         </div>
       </div>
 
 
 
 
-    <div class="line">
+      <div class="line">
         <div class="left">Nature's Graph Logo</div>
         <div class="right">
           <p>Illustrator</p>
           <p>2022</p>
         </div>
         <div class="img">
-          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/503734169213829.6488473616295.png" alt="">
+          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/503734169213829.6488473616295.png"
+            alt="">
         </div>
       </div>
 
@@ -158,45 +189,97 @@
 
 
 
-    <div class="line">
+      <div class="line">
         <div class="left">Neha Events Logo</div>
         <div class="right">
           <p>Illustrator</p>
           <p>2023</p>
         </div>
         <div class="img">
-          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/defa6a169213829.64c115dc72391.png" alt="">
+          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/defa6a169213829.64c115dc72391.png"
+            alt="">
         </div>
       </div>
 
 
 
 
-    <div class="line">
+      <div class="line">
         <div class="left">Instagram Grid Design</div>
         <div class="right">
           <p>Adobe Illustrator</p>
           <p>2023</p>
         </div>
         <div class="img">
-          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/21b2a3178504475.64e8e6dcbf051.jpg" alt="">
+          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/21b2a3178504475.64e8e6dcbf051.jpg"
+            alt="">
         </div>
       </div>
-
-
-
-
-
-
-
-
-
 
     </div>
   </main>
 
 
 
+
+
+
+
+
+  <script>
+    const cursor = document.querySelector('.custom-cursor');
+    let cursorVisible = false;
+    let idleTimeout;
+
+    function showDefaultCursor() {
+      cursor.style.cursor = 'none'; // Hide the custom cursor image
+      cursorVisible = false;
+    }
+
+    function showCustomCursor(x, y) {
+      cursor.style.cursor = 'none'; // Hide the default cursor
+      cursor.style.display = 'block'; // Show the custom cursor image
+      cursor.style.left = (x - cursor.offsetWidth / 2.6) + 'px'; // Center horizontally
+      cursor.style.top = (y - cursor.offsetHeight / 2.6) + 'px'; // Center vertically
+      cursorVisible = true;
+      cursor.style.cursor = 'auto'; // Show the default cursor centered on the custom cursor
+    }
+
+    // Show custom cursor after 10 seconds of inactivity
+    idleTimeout = setTimeout(showCustomCursor, 1000); // 10 seconds
+
+    document.addEventListener('mousemove', (e) => {
+      clearTimeout(idleTimeout);
+
+      if (cursorVisible) {
+        cursor.style.display = 'none';
+        cursorVisible = false;
+        cursor.style.cursor = 'auto'; // Show the default cursor
+      }
+
+      idleTimeout = setTimeout(() => {
+        showCustomCursor(e.clientX, e.clientY);
+      }, 1000); // 10 seconds
+    });
+
+    // Hide custom cursor when mouse leaves the page
+    document.addEventListener('mouseout', () => {
+      if (cursorVisible) {
+        cursor.style.display = 'none';
+        cursorVisible = false;
+        cursor.style.cursor = 'auto'; // Show the default cursor
+      }
+    });
+  </script>
+
+
+
+
+
+
+
+
+  
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
