--- a/about.html
+++ b/about.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About me</title>
-	<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+	<link rel="icon" href="img/fav.png">
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Poppins:wght@300&family=Ubuntu:wght@500&display=swap');
 
@@ -32,6 +33,8 @@
 
         html {
             scroll-behavior: smooth;
+            cursor: url('image/white.png'), auto;
+
         }
 
         body {
@@ -210,15 +213,13 @@
                         <img src="image/my.jpg" alt="">
                     </div>
                     <div class="message">
-                        <p style="position: relative;top: -3px;">Hey,<lottie-player
-                            id="lottie"
-                            src="https://lottie.host/352fe5ad-903c-4db1-8e53-051462bd7065/TbycpjWekk.json"
-                            background="Transparent" speed="1" style="    position: relative;
+                        <p style="position: relative;top: -3px;">Hey,<lottie-player id="lottie"
+                                src="https://lottie.host/352fe5ad-903c-4db1-8e53-051462bd7065/TbycpjWekk.json"
+                                background="Transparent" speed="1" style="    position: relative;
                             width: 29px;
                             display: inline-block;
                             left: 0px;
-                            top: 8px; cursor: pointer;" direction="1"
-                            mode="normal" loop hover></lottie-player></p>
+                            top: 8px; cursor: pointer;" direction="1" mode="normal" loop hover></lottie-player></p>
                     </div>
                 </div>
                 <div class="single">
@@ -312,44 +313,44 @@
                     <div class="message">
                         <p style="position: relative;top: -10px;">
                             Say hello on</a>,
-                            <a href="mailto:rahulnegi6606@gmail.com"><?xml version="1.0" encoding="UTF-8"?>
-                            <svg id="Layer_2" style="position: relative; height: 15px; top: 2px;" class="red" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg"
-                                viewBox="0 0 52.66 16.85">
-                                <defs>
-                                    <style>
-                                        .cls-1 {
-                                            fill: #fff;
-                                        }
+                            <a href="mailto:rahulnegi6606@gmail.com">
+                                <?xml version="1.0" encoding="UTF-8"?>
+                                <svg id="Layer_2" style="position: relative; height: 15px; top: 2px;" class="red"
+                                    data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52.66 16.85">
+                                    <defs>
+                                        <style>
+                                            .cls-1 {
+                                                fill: #fff;
+                                            }
 
-                                        .cls-1:hover {
-                                            fill: #8ed9eb
-                                        }
-                                    </style>
-                                </defs>
-                                <g id="Text" class="red">
-                                    <g>
-                                        <path class="cls-1"
-                                            d="m4.44,16.79h-.26c-1.11,0-1.98-.19-2.62-.57s-1.03-1.2-1.16-2.47c-.26-2.7-.4-5.36-.4-7.96,0-1.28.03-2.43.1-3.45.11-.96,1.1-1.51,2.97-1.66.66-.05,1.23-.08,1.73-.08.93,0,1.71.05,2.34.14s1.22.26,1.77.49c.14.07.25.23.32.49s.1.57.1.92c0,.41-.04.81-.13,1.2s-.21.72-.38.98-.38.39-.63.39c-.23,0-.57-.08-1.03-.25-.72-.24-1.25-.36-1.59-.36-.74,0-1.11.3-1.11.9,0,.38.06.63.18.75s.29.19.53.19c.16,0,.34-.02.53-.05.25-.05.52-.07.82-.07.23,0,.41.09.56.27s.25.41.32.69.1.59.1.92c0,.48-.07.94-.21,1.36s-.34.64-.6.64c-.4,0-.73-.03-.99-.1-.18-.04-.34-.06-.47-.06-.23,0-.39.08-.47.25s-.12.55-.12,1.16c0,.48.12.82.35,1.01s.5.29.81.29c.29,0,.61-.06.98-.17s.76-.24,1.16-.4l.16-.06c.06-.02.12-.03.18-.03.25,0,.46.13.62.4s.29.6.37.99.12.79.12,1.17c0,.35-.03.65-.1.92s-.17.43-.32.5c-.47.2-1.13.36-1.98.5s-1.71.2-2.57.2Z" />
-                                        <path class="cls-1"
-                                            d="m25.01,16.49c-.42,0-.83-.05-1.23-.15s-.73-.25-.98-.45-.38-.46-.38-.77c0-.79.08-2.03.23-3.73.19-2.33.28-3.93.28-4.79s-.07-1.49-.21-1.84-.3-.51-.49-.51c-.17,0-.35.12-.53.35s-.33.57-.45,1.02-.18.98-.18,1.62c0,1.27.05,2.79.15,4.57.05.87.08,1.61.09,2.21,0,.32-.21.56-.63.72s-.89.25-1.41.25c-.39,0-.77-.05-1.15-.15s-.68-.25-.92-.46-.36-.47-.36-.79v-3.5c.01-2-.06-3.47-.19-4.43-.08-.47-.19-.83-.34-1.06s-.31-.34-.47-.34c-.1,0-.2.06-.31.19s-.2.36-.27.69-.11.83-.11,1.48c0,1.07.05,2.07.15,3.01s.21,1.81.32,2.6c.08.59.15,1.14.21,1.64s.08.98.08,1.41c0,.19-.16.37-.49.54s-.72.31-1.18.41-.91.16-1.33.16c-.74,0-1.17-.17-1.3-.5-.38-1.13-.66-2.66-.85-4.58s-.28-3.77-.28-5.54c0-1.38.06-2.56.17-3.54.08-.44.36-.77.82-.99s.97-.32,1.51-.32c.41,0,.79.06,1.14.18s.61.28.77.5c.7-.43,1.39-.64,2.08-.64.55,0,1.07.15,1.57.44s.94.75,1.33,1.37c1.24-1.16,2.48-1.74,3.71-1.74.99,0,1.83.38,2.52,1.13.41.47.75,1.13.99,1.98.46,1.6.69,3.62.69,6.07,0,2.22-.18,4.02-.53,5.39-.1.29-.36.52-.8.67s-.91.23-1.44.23Z" />
-                                        <path class="cls-1"
-                                            d="m37.35,16.53c-.41,0-.83-.06-1.24-.18s-.73-.3-.95-.56c-.93.29-1.76.44-2.5.44-.96,0-1.75-.21-2.37-.62s-1.08-.94-1.39-1.59-.46-1.33-.46-2.03.16-1.45.47-2.13.77-1.24,1.38-1.67,1.35-.65,2.23-.65c.47,0,.96.07,1.49.21.4.12.7.23.91.32s.36.14.45.14c.11,0,.16-.1.16-.31,0-.19,0-.47-.02-.86l-.02-.53c-.04-.83-.12-1.42-.25-1.76s-.28-.52-.45-.52c-.2,0-.38.18-.56.54s-.29.79-.33,1.29c-.04.27-.21.48-.53.63s-.69.22-1.11.22c-.38,0-.75-.06-1.13-.19s-.69-.33-.94-.6-.38-.63-.38-1.07c.02-.9.26-1.67.7-2.29s1.03-1.09,1.76-1.41,1.51-.48,2.36-.48c.64,0,1.27.1,1.89.31s1.18.52,1.67.94.89.95,1.19,1.6.45,1.41.45,2.29c0,1.86-.08,3.69-.25,5.5s-.42,3.31-.74,4.5c-.05.17-.22.29-.5.38s-.6.13-.97.13Zm-4.6-3.63c.33,0,.71-.08,1.12-.25s.78-.38,1.09-.64.46-.53.46-.82c0-.17-.07-.3-.21-.41s-.35-.16-.63-.16c-.43,0-1.03.17-1.8.52-.26.14-.47.3-.6.5s-.21.39-.21.58c0,.17.06.33.19.47s.32.21.58.21Z" />
-                                        <path class="cls-1"
-                                            d="m43.5,3.49c-.58,0-1.06-.08-1.44-.24s-.66-.36-.84-.61-.28-.51-.28-.79c0-.45.23-.87.68-1.25s1.11-.58,1.96-.6c.86.02,1.52.22,1.99.6s.71.79.71,1.24c0,.28-.1.54-.29.8s-.5.46-.92.62-.94.24-1.58.24Zm-.16,13.32c-.37,0-.69-.05-.95-.14s-.41-.25-.45-.47c-.2-1.42-.36-2.99-.49-4.73s-.19-3.38-.19-4.93v-.99c0-.26.12-.48.36-.66s.54-.3.92-.39.76-.13,1.16-.13.75.04,1.1.12.63.2.85.36.33.35.33.59c0,.7,0,1.57-.02,2.61-.02,1.31-.03,2.66-.03,4.03,0,.78.01,1.51.03,2.18.02.55.02,1.07.02,1.56,0,.18-.14.35-.42.5s-.62.27-1.03.36-.8.14-1.19.14Z" />
-                                        <path class="cls-1"
-                                            d="m50.36,16.85c-.48,0-.92-.09-1.33-.27s-.65-.46-.75-.85c-.21-1-.38-2.33-.51-3.99s-.2-3.33-.2-5c0-2.49.15-4.32.45-5.5.07-.23.26-.39.58-.49s.69-.15,1.1-.15.81.04,1.22.12.75.19,1.02.32.41.29.41.46c0,.39.04,2.05.11,4.96.13,4.69.2,7.75.2,9.16,0,.26-.11.47-.34.66s-.52.32-.87.42-.71.15-1.09.15Z" />
+                                            .cls-1:hover {
+                                                fill: #8ed9eb
+                                            }
+                                        </style>
+                                    </defs>
+                                    <g id="Text" class="red">
+                                        <g>
+                                            <path class="cls-1"
+                                                d="m4.44,16.79h-.26c-1.11,0-1.98-.19-2.62-.57s-1.03-1.2-1.16-2.47c-.26-2.7-.4-5.36-.4-7.96,0-1.28.03-2.43.1-3.45.11-.96,1.1-1.51,2.97-1.66.66-.05,1.23-.08,1.73-.08.93,0,1.71.05,2.34.14s1.22.26,1.77.49c.14.07.25.23.32.49s.1.57.1.92c0,.41-.04.81-.13,1.2s-.21.72-.38.98-.38.39-.63.39c-.23,0-.57-.08-1.03-.25-.72-.24-1.25-.36-1.59-.36-.74,0-1.11.3-1.11.9,0,.38.06.63.18.75s.29.19.53.19c.16,0,.34-.02.53-.05.25-.05.52-.07.82-.07.23,0,.41.09.56.27s.25.41.32.69.1.59.1.92c0,.48-.07.94-.21,1.36s-.34.64-.6.64c-.4,0-.73-.03-.99-.1-.18-.04-.34-.06-.47-.06-.23,0-.39.08-.47.25s-.12.55-.12,1.16c0,.48.12.82.35,1.01s.5.29.81.29c.29,0,.61-.06.98-.17s.76-.24,1.16-.4l.16-.06c.06-.02.12-.03.18-.03.25,0,.46.13.62.4s.29.6.37.99.12.79.12,1.17c0,.35-.03.65-.1.92s-.17.43-.32.5c-.47.2-1.13.36-1.98.5s-1.71.2-2.57.2Z" />
+                                            <path class="cls-1"
+                                                d="m25.01,16.49c-.42,0-.83-.05-1.23-.15s-.73-.25-.98-.45-.38-.46-.38-.77c0-.79.08-2.03.23-3.73.19-2.33.28-3.93.28-4.79s-.07-1.49-.21-1.84-.3-.51-.49-.51c-.17,0-.35.12-.53.35s-.33.57-.45,1.02-.18.98-.18,1.62c0,1.27.05,2.79.15,4.57.05.87.08,1.61.09,2.21,0,.32-.21.56-.63.72s-.89.25-1.41.25c-.39,0-.77-.05-1.15-.15s-.68-.25-.92-.46-.36-.47-.36-.79v-3.5c.01-2-.06-3.47-.19-4.43-.08-.47-.19-.83-.34-1.06s-.31-.34-.47-.34c-.1,0-.2.06-.31.19s-.2.36-.27.69-.11.83-.11,1.48c0,1.07.05,2.07.15,3.01s.21,1.81.32,2.6c.08.59.15,1.14.21,1.64s.08.98.08,1.41c0,.19-.16.37-.49.54s-.72.31-1.18.41-.91.16-1.33.16c-.74,0-1.17-.17-1.3-.5-.38-1.13-.66-2.66-.85-4.58s-.28-3.77-.28-5.54c0-1.38.06-2.56.17-3.54.08-.44.36-.77.82-.99s.97-.32,1.51-.32c.41,0,.79.06,1.14.18s.61.28.77.5c.7-.43,1.39-.64,2.08-.64.55,0,1.07.15,1.57.44s.94.75,1.33,1.37c1.24-1.16,2.48-1.74,3.71-1.74.99,0,1.83.38,2.52,1.13.41.47.75,1.13.99,1.98.46,1.6.69,3.62.69,6.07,0,2.22-.18,4.02-.53,5.39-.1.29-.36.52-.8.67s-.91.23-1.44.23Z" />
+                                            <path class="cls-1"
+                                                d="m37.35,16.53c-.41,0-.83-.06-1.24-.18s-.73-.3-.95-.56c-.93.29-1.76.44-2.5.44-.96,0-1.75-.21-2.37-.62s-1.08-.94-1.39-1.59-.46-1.33-.46-2.03.16-1.45.47-2.13.77-1.24,1.38-1.67,1.35-.65,2.23-.65c.47,0,.96.07,1.49.21.4.12.7.23.91.32s.36.14.45.14c.11,0,.16-.1.16-.31,0-.19,0-.47-.02-.86l-.02-.53c-.04-.83-.12-1.42-.25-1.76s-.28-.52-.45-.52c-.2,0-.38.18-.56.54s-.29.79-.33,1.29c-.04.27-.21.48-.53.63s-.69.22-1.11.22c-.38,0-.75-.06-1.13-.19s-.69-.33-.94-.6-.38-.63-.38-1.07c.02-.9.26-1.67.7-2.29s1.03-1.09,1.76-1.41,1.51-.48,2.36-.48c.64,0,1.27.1,1.89.31s1.18.52,1.67.94.89.95,1.19,1.6.45,1.41.45,2.29c0,1.86-.08,3.69-.25,5.5s-.42,3.31-.74,4.5c-.05.17-.22.29-.5.38s-.6.13-.97.13Zm-4.6-3.63c.33,0,.71-.08,1.12-.25s.78-.38,1.09-.64.46-.53.46-.82c0-.17-.07-.3-.21-.41s-.35-.16-.63-.16c-.43,0-1.03.17-1.8.52-.26.14-.47.3-.6.5s-.21.39-.21.58c0,.17.06.33.19.47s.32.21.58.21Z" />
+                                            <path class="cls-1"
+                                                d="m43.5,3.49c-.58,0-1.06-.08-1.44-.24s-.66-.36-.84-.61-.28-.51-.28-.79c0-.45.23-.87.68-1.25s1.11-.58,1.96-.6c.86.02,1.52.22,1.99.6s.71.79.71,1.24c0,.28-.1.54-.29.8s-.5.46-.92.62-.94.24-1.58.24Zm-.16,13.32c-.37,0-.69-.05-.95-.14s-.41-.25-.45-.47c-.2-1.42-.36-2.99-.49-4.73s-.19-3.38-.19-4.93v-.99c0-.26.12-.48.36-.66s.54-.3.92-.39.76-.13,1.16-.13.75.04,1.1.12.63.2.85.36.33.35.33.59c0,.7,0,1.57-.02,2.61-.02,1.31-.03,2.66-.03,4.03,0,.78.01,1.51.03,2.18.02.55.02,1.07.02,1.56,0,.18-.14.35-.42.5s-.62.27-1.03.36-.8.14-1.19.14Z" />
+                                            <path class="cls-1"
+                                                d="m50.36,16.85c-.48,0-.92-.09-1.33-.27s-.65-.46-.75-.85c-.21-1-.38-2.33-.51-3.99s-.2-3.33-.2-5c0-2.49.15-4.32.45-5.5.07-.23.26-.39.58-.49s.69-.15,1.1-.15.81.04,1.22.12.75.19,1.02.32.41.29.41.46c0,.39.04,2.05.11,4.96.13,4.69.2,7.75.2,9.16,0,.26-.11.47-.34.66s-.52.32-.87.42-.71.15-1.09.15Z" />
+                                        </g>
                                     </g>
-                                </g>
-                            </svg></a> or over
-                            a coffee <lottie-player
-                            id="lottie"
-                            src="https://lottie.host/781d86ad-2804-4037-9f19-902645cb50d5/Z6QAyf4Nxq.json"
-                            background="Transparent" speed="1" style="    position: relative;
+                                </svg>
+                            </a> or over
+                            a coffee <lottie-player id="lottie"
+                                src="https://lottie.host/781d86ad-2804-4037-9f19-902645cb50d5/Z6QAyf4Nxq.json"
+                                background="Transparent" speed="1" style="    position: relative;
                             width: 68px;
                             display: inline-block;
                             left: -17px;
-                            top: 5px;" direction="1"
-                            mode="normal" loop autoplay></lottie-player>
+                            top: 5px;" direction="1" mode="normal" loop autoplay></lottie-player>
                         </p>
                     </div>
                 </div>
