--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <style>
       .custom-cursor {
+        left: -100px;
+        top: -100px;
       position: fixed;
       width: 70px; /* Adjust the size of the cursor */
       height: 70px;
