--- a/about.html
+++ b/about.html
@@ -299,7 +299,7 @@
                     </div>
                 </div>
                 <div class="seen">
-                    <p>Seen</p>
+                    <p style="color: #8ed9eb;">Seen</p>
                 </div>
 
 
