--- a/about.html
+++ b/about.html
@@ -254,7 +254,12 @@
                         <img src="image/my.jpg" alt="">
                     </div>
                     <div class="message">
-                        <p> In addition to technical skills, I have experience with branding, typography, layout design
+                        <p> In addition to technical skills, I have experience with branding, <img style="    position: relative;
+                            width: 130px;
+                            display: inline-block;
+                            left: 0px;
+                            border-radius: 0%;
+                            top: 8px; cursor: pointer;" src="image/type.png" alt="">, layout design
                             and much more. With abilities enable me to bring concepts to life and effectively
                             communicate messages to audiences through various forms of media
                         </p>
@@ -275,7 +280,16 @@
                         <img src="image/my.jpg" alt="">
                     </div>
                     <div class="message">
-                        <p>Throughout my career, I have worked on various projects ranging from branding and advertising
+                        <p>Throughout my career <img style=" 
+                                position: relative;
+    width: 18px;
+    display: inline-block;
+    left: 0px;
+    border-radius: 0%;
+    height: 30px;
+    top: 8px;
+    cursor: pointer;" src="image/spray.png" alt="">, I have worked on various projects ranging from branding and
+                            advertising
                             to web and print design. I have collaborated with clients from diverse industries,
                             understanding their requirements and providing them with innovative design solutions.
                         </p>
